# MetaHackathon

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  benchmark_performance.py  env_base.txt  http_server.txt  inference.py  openenv.yaml  prevalidation.sh  pyproject.toml  requirements.txt  validate_graders.py  validate_submission.sh
pii_redactor_env/: .dockerignore  .gitignore  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
pii_redactor_env/data/: generate_seed_data.py
pii_redactor_env/data/easy/: customers.csv
pii_redactor_env/data/hard/: records.json
pii_redactor_env/data/medium/: chat_logs.txt
pii_redactor_env/inference/: config.py  inference.py  prompts.py
pii_redactor_env/server/: Dockerfile  app.py  executor.py  pii_environment.py  requirements.txt  workspace.py
pii_redactor_env/tasks/: __init__.py  grader_easy.py  grader_hard.py  grader_medium.py  task_registry.py
pii_redactor_env/tests/: test_e2e.py  test_graders.py
server/: app.py
tasks/: __init__.py  grader_easy.py  grader_hard.py  grader_medium.py
